syntax = "proto3";

option go_package = "./pb";

package gserver;

// 进度类型
enum ProgressType {
  ProgressType_None    = 0; // 解决"The first enum value must be zero in proto3."的报错
  ProgressType_Fight         = 2; // 战斗
  ProgressType_PlayerPropertyInc = 3; // 玩家属性值增加(int32)
}

// 进度计数类型
enum CountType {
  CountType_None    = 0; // 解决"The first enum value must be zero in proto3."的报错
  // 简单计数,每触发一次事件,进度+1
  // example:
  //   进度: 进行10场战斗
  //   每触发一次战斗事件,进度就+1(或者事件字段的值)
  CountType_Counter = 1;

  // 每次事件触发时,重置进度
  // example:
  //   进度: 升到10级
  //   每触发一次升级事件,进度重置为当前等级
  CountType_Reset = 2;

  // 事件的某个字段作为进度增加值
  // example:
  //   进度: 在商店购买10个药水
  //   单次批量购买4个药水,触发购买事件,假设事件的其中一个字段是购买数量(这里就是4),则进度+4
  CountType_EventField = 3;
}

// 玩家升级事件
message EventPlayerLevelup {
  int64 playerId = 1;
  int32 level = 2;
}

// 战斗事件
message EventFight {
  int64 playerId = 1;
  bool isPvp = 2;
  bool isWin = 3;
}

// 玩家属性值增加(int32)
message EventPlayerPropertyInc {
  int64 playerId = 1;
  string propertyName = 2;
  int32 propertyValue = 3;
}
